# logrot

./: .clang-format  .clang-format-ignore  ChangeLog  Makefile.in  README  README.md  TODO  config.h.in  configure  configure.in  err.c  logrot.1.in  logrot.c  logrot.h  meson.build  mkinstalldirs  mkstemp.c  strerror.c  stringlist.c  stringlist.h
