dnl	$Id: configure.in,v 1.8 2005/05/30 01:55:41 lukem Exp $

dnl
dnl Copyright 1998, 1999, 2005 Luke Mewburn <luke@mewburn.net>.
dnl All rights reserved.
dnl
dnl Redistribution and use in source and binary forms, with or without
dnl modification, are permitted provided that the following conditions
dnl are met:
dnl 1. Redistributions of source code must retain the above copyright
dnl    notice, this list of conditions and the following disclaimer.
dnl 2. Redistributions in binary form must reproduce the above copyright
dnl    notice, this list of conditions and the following disclaimer in the
dnl    documentation and/or other materials provided with the distribution.
dnl 3. The name of the author may not be used to endorse or promote products
dnl    derived from this software without specific prior written permission.
dnl
dnl THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
dnl IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
dnl OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
dnl IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
dnl INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
dnl BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
dnl OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
dnl ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
dnl TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
dnl USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
dnl

AC_INIT(logrot.c)
AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(pidfile, [\
  --with-pidfile=pidfile  Path to syslogd's pidfile [auto-detected]],
    [:],
    [:])

AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(GZIP, gzip)

AC_HEADER_STAT
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdarg.h stdlib.h string.h stringlist.h \
		strings.h unistd.h])

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([sysconf waitpid])
AC_REPLACE_FUNCS([err mkstemp strerror])

AC_MSG_CHECKING([location of syslogd's pid file])
if test "${with_pidfile:+set}" = set; then
	PIDFILE="$with_pidfile"
	AC_MSG_RESULT([(provided) $PIDFILE])
else
	pidfiles="/var/run/syslog.pid /var/run/syslogd.pid /etc/syslog.pid"
	for PIDFILE in ${pidfiles}; do
		if test -f $PIDFILE; then
			break
		fi
	done
	AC_MSG_RESULT([$PIDFILE])
fi
AC_SUBST(PIDFILE)


AC_OUTPUT(Makefile)
